objects/Veda_File_Ban_Report__c.object
<CustomObject>
    <fields>
        <fullName>Veda_Comprehensive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda Comprehensive</label>
        <referenceTo>Veda_Comprehensive__c</referenceTo>
        <relationshipLabel>Veda File Ban Reports</relationshipLabel>
        <relationshipName>Veda_File_Ban_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>end_Date__c</fullName>
        <label>end Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Extended__c</fullName>
        <label>is Extended</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reported_Date__c</fullName>
        <label>reported Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veda File Ban Report</label>
    <nameField>
        <label>File Ban Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda File Ban Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>